2002-08-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Gravital.net.

2002-07-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Internet Nebraska, 2ndmail.com, and
	eScrubber.
	
2002-07-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Mention tmda.el.

2002-07-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-ofmipd.ht: Document -A option.

2002-07-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht: Update links for tmda.net.

2002-07-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht: Add AIMS.

2002-07-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Mention tmda-ofmipd.

	* features.ht (Links): Ditto.

	* howto-links.h, howtos.ht, howtos.html, tmda-ofmipd.ht,
	tmda-ofmipd.html: New files.
	
2002-07-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Raymond Hosting.

2002-07-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Gmane.

2002-06-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Remove faq.ht, faq.html.

2002-06-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add rupture.net.

	* results.ht (Links): Add testimonial from Bettina Balz.

2002-06-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht (Links): Warn about the outdated "stable" and/or
	"testing" Debian packages.

2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Update Nightsky link.

2002-05-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Stacey A. Ross.

2002-05-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update link to QAdmin-TMDA.

	* resources.ht (Links): Ditto.
