@@ -5,3 +5,4 @@
 <li><a href="features.html">Features</a>
 <li><a href="results.html">Results &amp; Testimonials</a>
 <li><a href="inuse.html">TMDA In Use</a>
+<li><a href="press.html">Press Coverage</a>
