@@ -1,3 +1,7 @@
+2002-08-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* press.ht: New page.
+
 2002-08-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* inuse.ht (Links): Add Gravital.net.
